# customizedSlico

./: .gitignore  CMakeLists.txt  _private.hpp  _slicAlgorithm.cpp  _slicAlgorithm.hpp  _slicPrecomp.hpp  createCsv.py  images.csv  readme.md  slicAlgorithm.cpp  slicAlgorithm.hpp  slicEx.cpp  slicFile.cpp  slicPrecomp.hpp
data/: __metadata.csv  _color2.csv  _labels.csv  _x.csv  _y.csv
